--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
   </dependencyManagement>
 
   <dependencies>
+  
+	  <dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.12</version>
+		  <scope>test</scope>
+	  </dependency>
+		
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-core</artifactId>
